Resolve #6, controle de visibilidade. Administra erros sem parar fluxo de navegacao

--- a/src/style.scss
+++ b/src/style.scss
@@ -156,6 +156,7 @@ p {
 	background-color: #FFF;
 	transform: translateX(-100%);
 	transition: all ease-in-out .2s;
+	.no-display { display: none }
 	#toggleHidden {
 		position: absolute;
 		top: 12px;
@@ -259,7 +260,8 @@ p {
 			background-color: #FFF;
 		}
 	}
-	#info {
+
+	#info, #info-error {
 		transition: 200ms ease-in-out margin-top;
 		overflow-y: scroll;
 		overflow-x: hidden;
@@ -489,7 +491,7 @@ p {
 	}
 }
 
-#infoWrap[class=""] + #map {
+#map.no-panel {
 	margin-left: 0;
 }
 
